--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
     		<version>2.0.1</version>
 		</dependency>
 
+		<dependency>
+    		<groupId>org.mindrot</groupId>
+    		<artifactId>jbcrypt</artifactId>
+    		<version>0.4</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
